# maze-runner

./: .gitignore  CMakeLists.txt  README.md  dependencies-tesseract.rosinstall  dependencies.rosinstall  package.xml
.github/workflows/: ci_focal.yml
config/: moveit.rviz
docs/: code_integration_diagram.drawio
docs/maze_vision/imgs/: debug_step1_poses_annotated.tiff  debug_step2_masked.tiff  debug_step3_masked_rotated.tiff  debug_step4_masked_rotated_cropped.tiff  debug_step5_cv2_cleanup.tiff  debug_step6_maurer_cleaned.tiff  debug_step7_solved_path.tiff
docs/sample_content/mazes/: maze_100x100px.tif
dream3d_pipelines/: filter_irs_image.json  filter_maurer_path.json  processMazePath.json  rotateImage.json
include/mazesolving/: ex_path.tiff  factory.py  path_soln.csv  solve.py
launch/: irs_nodelet.launch  maze_runner.launch  mzrun_parameter.launch  robot_and_camera.launch  rs_rgbd_custom.launch  t1_intialize.launch  t1_intialize.launch.xml  t1_mazerunner.launch.xml  t1_vision.launch.xml  tf_camera_transform_listener.launch
launch_refactor/: maze_runner_refactor.launch  mh5l_moveitconfig.launch  mzrun_parameter.launch  scrap_cameraTransforms  t1_intialize.launch  vision_system.launch
maze_bringup/: CMakeLists.txt  package.xml
maze_bringup/config/: sim_window.rviz
maze_bringup/launch/: attach_camera.launch.xml  start.launch.xml
maze_motion_planning/: CMakeLists.txt  package.xml
maze_motion_planning/launch/: planning_server.launch.xml
maze_motion_planning/src/: motoman_gp7_ikfast_plugin.cpp  motoman_gp7_ikfast_solver.hpp  planning_server.cpp
maze_msgs/: CMakeLists.txt  package.xml
maze_msgs/srv/: GenerateMotionPlan.srv
maze_runner/: CMakeLists.txt  package.xml
maze_runner/launch/: t1_mazerunner.launch.xml
maze_runner/scripts/: maze_runner.py
maze_runner/scripts_original/: maze_runner_original.py  rviz_pose_array.py
maze_solver/: factory.py  mazes.py
maze_support/: CMakeLists.txt  colcon.pkg  package.xml
maze_support/cmake/: maze_support-config.cmake.in
maze_support/config/: rviz_base_config.rviz  wc3.srdf  workcell_plugins.yaml
maze_support/launch/: test_gp7.launch.xml
maze_support/meshes/collision/: eef.stl  eef_wcamera.stl  eef_wtip.stl
maze_support/meshes/visual/: eef.stl  eef_wtip.stl
maze_support/urdf/: eef_macro.xacro  wc3.xacro
maze_vision/: CMakeLists.txt  _FIDUCIAL_METHOD_ARUCO.py  _PRCS_D3D_FEATURES.py  _PRCS_DEPTH.py  _PRCS_PATH_SOLVER.py  _RUN_D3D.py  maze_solver.py  maze_vision.py  package.xml
maze_vision/config/: debug_vision.perspective
maze_vision/launch/: t1_vision.launch.xml
maze_vision/maze_solver/: astar.py  dijkstra.py  priority_queue.py  solve.py
maze_vision/maze_vision/: _FIDUCIAL_METHOD_ARUCO.py  _FIDUCIAL_METHOD_RGB_DOTS.py  _PRCS_PATH_SOLVER.py  __init__.py  maze_vision.py
maze_vision/maze_vision/resources/: pipeline_maurer_path.json
maze_vision/nodes/: node_maze_vision.py  solvedMazePath.py
maze_vision/resources/: cornerDots_locator.json  pipeline_maurer_path.json  pipeline_rgb_fiducial.json
maze_vision/sim/: lab_demo_soln.csv
msg/: MazeData.msg  maze_info.msg
node_vision_processing/: PRCS_D3D_FEATURES.py  PRCS_DEPTH.py  PRCS_PATH_SOLVER.py  RUN_D3D.py  dataSaver.py  node_maze_vision.py  node_vision.py  node_vision_support.py  tools_dream3d.py  vision_processor.py
nodes/: test_subscriber.py  tf_camera_transform_publisher.py  tf_origin_camera_subscriber.py
sample_content/: batchRotateMazes.py
sample_content/mazes/: maze_10x10px.tif
sample_content/sampleRotation_cornerDots/: mazeRot_100x100_0.tif  mazeRot_100x100_1.tif  mazeRot_100x100_10.tif  mazeRot_100x100_100.tif  mazeRot_100x100_101.tif  mazeRot_100x100_102.tif  mazeRot_100x100_103.tif  mazeRot_100x100_104.tif  mazeRot_100x100_105.tif  mazeRot_100x100_106.tif  mazeRot_100x100_107.tif  mazeRot_100x100_108.tif  mazeRot_100x100_109.tif  mazeRot_100x100_11.tif  mazeRot_100x100_110.tif  mazeRot_100x100_111.tif  mazeRot_100x100_112.tif  mazeRot_100x100_113.tif  mazeRot_100x100_114.tif  mazeRot_100x100_115.tif  mazeRot_100x100_116.tif  mazeRot_100x100_117.tif  mazeRot_100x100_118.tif  mazeRot_100x100_119.tif  mazeRot_100x100_12.tif  mazeRot_100x100_120.tif  mazeRot_100x100_121.tif  mazeRot_100x100_122.tif  mazeRot_100x100_123.tif  mazeRot_100x100_124.tif  mazeRot_100x100_125.tif  mazeRot_100x100_126.tif  mazeRot_100x100_127.tif  mazeRot_100x100_128.tif  mazeRot_100x100_129.tif  mazeRot_100x100_13.tif  mazeRot_100x100_130.tif  mazeRot_100x100_131.tif  mazeRot_100x100_132.tif  mazeRot_100x100_133.tif  (+140 more)
sample_content/sim_vision/: color_1.tiff  depth_1.tiff
sample_content/surfaces/: sample_airfoil_remeshed.ply  sample_airfoil_simple.ply
scripts/: d3d_post_process.py  maze_runner.py  maze_runner_2.py  realsense_vision_tools.py  robot_support.py  rviz_pose_array.py  surface_contour.py  visual_camera_positions.py
scripts_original/: d3d_post_process.py  maze_runner_original.py  process_path.py
scripts_refactor/: maze_runner_2.py
scripts_vision/: d3d_post_process.py
